fixed spacing issue on index.html page mobile view

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -38,7 +38,7 @@ form {
 /* LAYOUT */
 body {
     display: grid;
-    grid-template-rows: 0.25fr 2fr 0.75fr;
+    grid-template-rows: 0.5fr 2fr 0.75fr;
 }
 .spacing-top-div {
     grid-row: 1/2;
